test/bad/functions/args03.px

func f(Int x: true) def
    return
